Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -18,7 +18,7 @@
   * View Info
   * Join/Quit an alliance
  * Notification
-  * Fleet Events
+  * Fleet Events (Friendly, Neutral, Hostile)
   * Building/Research Complete
 = Extra =
 
