--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -82,10 +82,12 @@
 	<string name="message_report">Melden</string>
 	<string name="message_delete">Löschen</string>
 	<string name="message_delete_all">Alle Löschen</string>
+	<string name="message_delete_selected">Ausgewählte löschen</string>
 	<string name="message_from">Von:</string>
 	<string name="message_to">An:</string>
 	<string name="message_date">Datum:</string>
 	<string name="message_subject">Betreff:</string>
+	<string name="message_mark_as_read">Als gelesen markieren</string>
 	
 	<string name="object_amount">Anzahl</string>
 	<string name="object_level">Stufe</string>
@@ -126,5 +128,8 @@
 	<string name="mission_transport">Transportieren</string>
 	<string name="mission_espionage">Spionage</string>
 	<string name="mission_missile">Racketen Angriff</string>
-	<string name="mission_harvest">Abbauen</string>
+	<string name="mission_harvest">Abbauen</string>	
+	
+	<string name="yes">Ja</string>
+	<string name="no">Nein</string>
 </resources>
