--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -2,6 +2,11 @@
 
 =Changelog=
 
+== 0.6.1 ==
+ * Added French translation
+ * Fixed Fleet Movement not showing hostile fleets
+ * Fixed wrong shipcount on "New Mission"
+
 == 0.6 ==
  * Added sound alert to notification
  * Added unread messages to notification
