--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -2,6 +2,12 @@
 
 =Changelog=
 
+== 0.6.2 ==
+ * Added missing planet icons
+ * Added folders to message box (*Will show up for everyone but only work if you have commander*)
+ * Added list of Buddies to select from when sending a new message
+ * Fixed icon for small transporter
+
 == 0.6.1 ==
  * Added French translation
  * Fixed Fleet Movement not showing hostile fleets
