--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -10,4 +10,4 @@ But the app does (mostly) simulate what you whould do with a browser, making it 
 A: Most likely it's not your fault. If a button is disabled (grayed-out) it's because the functionality is not implemented or released yet. If a button is clickable but does nothing it's because we forgot to disable or hide it on release ;).
 
 
-If your question doesn't got answered please send your question to _ogame@ov3rk1ll.com_. 
+If your question didn't get answered please send your question to _ogame@ov3rk1ll.com_. 
