--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -1,6 +1,9 @@
 #summary Changelog
 
 =Changelog=
+== 0.6.4 ==
+ * update to server version 2.1.4
+ * improved handling of server updates
 
 == 0.6.3 ==
  * Fixed crash on single planet accounts
