--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -2,6 +2,9 @@
 
 =Changelog=
 
+== 0.6.6 ==
+ * Fixed login errors for server version 2.3.0
+
 == 0.6.5 ==
  * update to server version 2.2.5
  * Disabled market-only features
