--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -34,6 +34,7 @@
 	<string name="more">More</string>
 	<string name="requirements">Requirements</string>
 	<string name="not_available">Not available</string>
+	<string name="save">Save</string>
 	
 	<string name="fleet_info_title">Fleet Information</string>
 	<string name="new_mission">New Mission</string>
@@ -41,17 +42,19 @@
 	<string name="error_login">Wrong login</string>
 	<string name="error_load">Unable to access server</string>
 	<string name="error_send_command">Unable to send command</string>
+	<string name="error_connection_timeout">Unable to connect. Please check your network connection</string>
+	<string name="error_unknown">An unknown error occured</string>
 	
 	<string name="new_command">New Command</string>
 	<string name="enter_amount">Enter amount</string>
-	<string name="send_command">Sending command...</string>
+	<string name="send_command">Sending command &#8230;</string>
 	<string name="ask_with_count" formatted="false">Send command for %d %s?</string>
 	<string name="ask_no_count">Send command for %s?</string>
 	<string name="now_building">%s is now being built.</string>
 	<string name="building_time">Building time: %s</string>
 	<string name="buildable_in">Not enough resources\nBuildable in: %s</string>
 	<string name="buildable_once">%s can only be built once</string>
-	<string name="loading">Loading...</string>
+	<string name="loading">Loading &#8230;</string>
 	<string name="change_planet">Switching to \"%s\"</string>
 	<string name="in_queue">In queue</string>
 	<string name="time_to_complete">Time to complete: %s</string>
@@ -77,6 +80,10 @@
 	<string name="settings_fleet_hostile_summary">Notify on hostile events</string>
 	<string name="settings_messages">Messages</string>
 	<string name="settings_messages_summary">Notify on unread messages</string>
+	
+	<string name="settings_galaxy">Galaxy Settings</string>
+	<string name="settings_galaxy_debris_mark">Debris mark</string>
+	<string name="settings_galaxy_debris_mark_summary">Mark debris for min number of recyclers</string>
 	
 	<string name="message_no_message">No message to display</string>
 	<string name="message_send">Send</string>
@@ -105,7 +112,7 @@
 	
 	<string name="galaxy_colonize">Colonize position %s?</string>
 	<string name="galaxy_probes">Send esp. probe?</string>
-	<string name="galaxy_activity">Activity: %s</string>
+	<string name="galaxy_activity">%s</string>
 	<string name="galaxy_activity_now">now</string>
 	<string name="galaxy_empty_slot">Empty slot</string>
 	
